--- a/HappyNewYearCard/app/src/main/res/values/strings.xml
+++ b/HappyNewYearCard/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Happy New Year Card</string>
-    <string name="image_description">this is my happy new year image</string>
-    <string name="str_from_whom">from, Bita</string>
+    <string name="image_description">This is my Happy New Year Image</string>
+    <string name="str_from_whom">from, Jeffrey to You All</string>
 </resources>
